--- a/使用说明.md
+++ b/使用说明.md
@@ -1,8 +1,179 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/alert_background" />
-    <corners android:radius="16dp" />
-    <stroke
-        android:width="2dp"
-        android:color="@color/alert_text" />
-</shape>
+# 短视频时间监测器 - 使用说明
+
+## 快速开始
+
+### 1. 导入项目到Android Studio
+1. 打开Android Studio
+2. 选择 "File" → "Open"
+3. 选择 `ShortVideoMonitor` 文件夹
+4. 等待Gradle同步完成
+
+### 2. 运行应用
+1. 连接Android设备（Android 6.0+）或启动模拟器
+2. 点击运行按钮（绿色三角形）
+3. 等待应用安装和启动
+
+### 3. 授予权限（重要！）
+应用首次运行时需要授予两个权限：
+
+#### 权限1：悬浮窗权限
+1. 点击应用中的"悬浮窗权限"按钮
+2. 系统会跳转到设置页面
+3. 找到"短视频时间监测器"应用
+4. 开启"允许显示在其他应用的上层"权限
+5. 返回应用
+
+#### 权限2：使用情况统计权限
+1. 点击应用中的"使用情况统计权限"按钮
+2. 系统会跳转到"使用情况访问权限"设置
+3. 找到"短视频时间监测器"应用
+4. 开启权限开关
+5. 返回应用
+
+### 4. 开始使用
+1. **设置时间限制**：输入想要限制的时间（分钟），默认3分钟
+2. **启用通知**：保持开关开启以接收弹窗提醒
+3. **点击"开始监测"**：应用开始后台监测
+4. **使用短视频应用**：打开抖音、快手等应用
+5. **接收提醒**：超过时间限制时会弹窗提醒
+
+## 功能说明
+
+### 主界面
+- **状态显示**：显示监测状态（正在监测/已停止）
+- **当前应用**：显示正在使用的应用名称
+- **使用时间**：显示在当前应用上的使用时间
+- **控制按钮**：开始/停止监测按钮
+- **权限管理**：快速跳转到权限设置
+- **设置选项**：时间限制、通知开关
+
+### 弹窗提醒
+当在短视频应用上连续使用超过设定时间时：
+1. 屏幕中央会出现一个半透明弹窗
+2. 显示提醒信息和使用时间
+3. 提供两个选项：
+   - **关闭提示**：立即关闭弹窗
+   - **5分钟后提醒**：延迟5分钟再次提醒
+4. 弹窗会在10秒后自动关闭
+
+### 后台服务
+- 应用使用后台服务持续监测
+- 即使关闭应用界面，监测仍会继续
+- 需要手动点击"停止监测"来结束监测
+
+## 注意事项
+
+### 电池优化
+为了确保监测服务正常运行：
+1. 进入手机设置 → 电池 → 电池优化
+2. 找到"短视频时间监测器"
+3. 选择"不优化"或"允许后台活动"
+
+### 应用白名单
+部分手机系统会限制后台应用：
+1. 进入手机设置 → 应用管理
+2. 找到"短视频时间监测器"
+3. 开启"自启动"和"后台运行"权限
+
+### 兼容性
+- 支持Android 6.0及以上版本
+- 需要系统支持使用情况统计API
+- 部分定制系统可能需要额外设置
+
+## 故障排除
+
+### 问题1：无法监测应用使用
+**可能原因**：未授予使用情况统计权限
+**解决方法**：
+1. 返回应用主界面
+2. 点击"使用情况统计权限"按钮
+3. 在系统设置中开启权限
+4. 重启应用
+
+### 问题2：弹窗不显示
+**可能原因**：未授予悬浮窗权限
+**解决方法**：
+1. 返回应用主界面
+2. 点击"悬浮窗权限"按钮
+3. 在系统设置中开启权限
+4. 重启应用
+
+### 问题3：监测服务自动停止
+**可能原因**：系统电池优化限制
+**解决方法**：
+1. 将应用添加到电池优化白名单
+2. 关闭相关省电模式
+3. 确保应用在后台运行权限
+
+### 问题4：部分应用无法识别
+**可能原因**：应用包名不在监测列表中
+**解决方法**：
+1. 打开 `VideoMonitorService.java`
+2. 在 `VIDEO_APPS` 数组中添加应用包名
+3. 重新编译运行
+
+## 开发说明
+
+### 添加新应用
+要添加新的短视频应用到监测列表：
+
+1. 找到应用的包名：
+   ```bash
+   # 通过ADB获取当前前台应用包名
+   adb shell dumpsys window | findstr mCurrentFocus
+   ```
+
+2. 修改 `VideoMonitorService.java`：
+   ```java
+   private static final String[] VIDEO_APPS = {
+       "com.ss.android.ugc.aweme",     // 抖音
+       "com.kuaishou.nebula",          // 快手
+       // 添加新的包名
+       "com.new.video.app"             // 新应用
+   };
+   ```
+
+### 自定义弹窗样式
+修改 `alert_overlay.xml` 文件：
+- 调整布局尺寸
+- 修改背景颜色
+- 更改按钮样式
+- 调整自动关闭时间
+
+### 修改监测频率
+在 `VideoMonitorService.java` 中：
+```java
+private static final long CHECK_INTERVAL = 1000; // 当前1秒，可调整
+```
+
+## 安全与隐私
+
+### 数据收集
+- 应用仅监测应用使用时间
+- 不收集任何个人数据
+- 不记录具体操作内容
+- 所有数据仅在本地处理
+
+### 权限说明
+- **悬浮窗权限**：仅用于显示提醒弹窗
+- **使用情况统计**：仅用于识别当前使用应用
+- 无网络权限，无数据上传
+
+## 更新日志
+
+### 版本1.0
+- 初始版本发布
+- 基本监测功能
+- 弹窗提醒功能
+- 权限管理界面
+
+## 支持与反馈
+
+如有问题或建议：
+1. 查看README.md中的详细说明
+2. 检查故障排除部分
+3. 修改源代码自定义功能
+
+---
+
+**提示**：合理使用短视频，注意休息，保护眼睛健康！
